Fix too large <a/> area of item names
Contributed by @akameco

--- a/app/src/component/style/ItemName.scss
+++ b/app/src/component/style/ItemName.scss
@@ -3,8 +3,6 @@
 .ItemName-container {
 	font-size: 1.1em;
 	margin-right: 0.5em;
-	display: flex;
-	align-items: center;
 }
 
 .ItemName-container-highlighted {
